@@ -1,5 +1,10 @@
 2007-05-15  Vincent Untz  <vuntz@gnome.org>
 
+	* launcher.c: (setup_button): if the value for the Icon key is empty,
+	use the launcher icon
+
+2007-05-15  Vincent Untz  <vuntz@gnome.org>
+
 	* panel-util.c: (panel_make_unique_desktop_path_from_name): use
 	MAXNAMLEN instead of NAME_MAX, for BSD/Solaris compatibility
 	Fix bug #438637. Patch by Damien Carbery <damien.carbery@sun.com>
